<resources>
    <string name="app_name">Moodflow</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="google_in">Войти через Google</string>
    <string name="add_note">Добавить запись</string>
    <string name="in_day">в день:</string>
    <string name="seria">cерия:</string>
    <string name="journal">Журнал</string>
    <string name="statistic">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="what_about_your_feeling">Что вы сейчас чувствуете?</string>
    <string name="emotion_in_week">Эмоции\nпо дням недели</string>
    <string name="frequent_emotions">Самые частые эмоции</string>
    <string name="your_day_emotion">Ваше настроение\nв течение дня</string>
    <string name="early_morning">Раннее утро</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="lately_evening">Поздний вечер</string>
    <string name="send_notifications">Присылать уведомления</string>
    <string name="finger_enter">Вход по отпечатку пальца</string>
    <string name="notification">Напоминание</string>
    <string name="minutes">Минуты</string>
    <string name="hours">Часы</string>
    <string name="save">Сохранить</string>
    <string name="mock_emotion">Удовлетворённость</string>
    <string name="choose_emotion">Выберите эмоцию, лучше всего описывающую, что вы сейчас чувствуете</string>
    <string name="mock_feeling_tired_description">ощущение, что необходимо отдохнуть</string>
    <string name="mock_tired">Усталость</string>

    <string name="emotion_rage">Ярость</string>
    <string name="emotion_tension">Напряжение</string>
    <string name="emotion_excitement">Восторг</string>
    <string name="emotion_confidence">Уверенность</string>
    <string name="emotion_envy">Зависть</string>
    <string name="emotion_anxiety">Беспокойство</string>
    <string name="emotion_arousal">Возбуждение</string>
    <string name="emotion_happiness">Счастье</string>
    <string name="emotion_burnout">Выгорание</string>
    <string name="emotion_tiredness">Усталость</string>
    <string name="emotion_calmness">Спокойствие</string>
    <string name="emotion_satisfaction">Удовлетворённость</string>
    <string name="emotion_depression">Депрессия</string>
    <string name="emotion_apathy">Апатия</string>
    <string name="emotion_gratitude">Благодарность</string>
    <string name="emotion_security">Защищённость</string>

    <string name="description_rage">интенсивный гнев, желание выплеснуть эмоции</string>
    <string name="description_tension">чувство стресса, как будто на грани</string>
    <string name="description_excitement">взрыв радости и энтузиазма</string>
    <string name="description_confidence">чувство силы и веры в себя</string>
    <string name="description_envy">желание обладать тем, что есть у других</string>
    <string name="description_anxiety">тревога о будущем или текущих проблемах</string>
    <string name="description_arousal">энергия и предвкушение чего-то нового</string>
    <string name="description_happiness">глубокое чувство радости и удовлетворения</string>
    <string name="description_burnout">полное истощение от перегруза</string>
    <string name="description_tiredness">ощущение, что необходимо отдохнуть</string>
    <string name="description_calmness">мирное состояние, отсутствие тревог</string>
    <string name="description_satisfaction">чувство гармонии и полноты</string>
    <string name="description_depression">глубокая грусть и апатия</string>
    <string name="description_apathy">отсутствие интереса и мотивации</string>
    <string name="description_gratitude">чувство признательности и тепла</string>
    <string name="description_security">ощущение безопасности и уюта</string>
    <string name="notion">Запись</string>
    <string name="mock_14_36_time">сегодня, 14:36</string>
    <string name="what_did_you_do">Чем вы занимались?</string>
    <string name="with_who">С кем вы были?</string>
    <string name="where_you_been">Где вы были?</string>

    <string name="chip_food">Приём пищи</string>
    <string name="chip_meeting_friends">Встреча с друзьями</string>
    <string name="chip_workout">Тренировка</string>
    <string name="chip_hobby">Хобби</string>
    <string name="chip_rest">Отдых</string>
    <string name="chip_trip">Поездка</string>

    <string name="chip_alone">Один</string>
    <string name="chip_friends">Друзья</string>
    <string name="chip_family">Семья</string>
    <string name="chip_colleagues">Коллеги</string>
    <string name="chip_partner">Партнёр</string>
    <string name="chip_pets">Питомцы</string>

    <string name="chip_home">Дом</string>
    <string name="chip_work">Работа</string>
    <string name="chip_school">Школа</string>
    <string name="chip_transport">Транспорт</string>
    <string name="chip_street">Улица</string>

    <string name="chip_empty"></string>

    <string name="day_monday">Понедельник</string>
    <string name="day_tuesday">Вторник</string>
    <string name="day_wednesday">Среда</string>
    <string name="day_thursday">Четверг</string>
    <string name="day_friday">Пятница</string>
    <string name="day_saturday">Суббота</string>
    <string name="day_sunday">Воскресенье</string>
    <string name="category_emotions">Эмоции по категориям</string>
    <string name="mock_count_category_emotions">5 записей</string>
    <string name="mock_name">Иван Иванов</string>
    <string name="add_notion_text">Добавить напоминание</string>
    <string name="mock_one">1</string>
    <string name="mock_yesterday_23">вчера, 23:40</string>
    <string name="i_am_feeling">Я чувствую</string>
    <string name="mock_card_emotion">выгорание</string>
	<string name="notification_permission">Разрешите присылать уведомления в настройках</string>
</resources>