<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="24dp"
    android:paddingBottom="24dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/drag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drag_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bottom_sheet_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="32sp"
        android:fontFamily="@font/gwen_trial_regular"
        android:gravity="start"
        android:lineHeight="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/drag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.example.moodflow.view.CustomClockView
        android:id="@+id/clock"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/time_picker_layout"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_title" />


    <TextView
        android:id="@+id/time_picker_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/velasans_regular"
        android:gravity="center"
        android:lineHeight="64dp"
        android:text=":"
        android:textSize="57sp"
        app:layout_constraintBottom_toBottomOf="@+id/clock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time_picker_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp">
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            android:fontFamily="@font/velasans_regular"
            android:textSize="12sp"
            android:gravity="start"
            android:paddingTop="7dp"
            />
        <Space
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <TextView
            android:layout_weight="1"
            android:fontFamily="@font/velasans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="12sp"
            android:gravity="start"
            android:paddingTop="7dp"
            />
    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/velasans_medium"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_label" />


</androidx.constraintlayout.widget.ConstraintLayout>