<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <com.otaliastudios.zoom.ZoomLayout
        android:id="@+id/zoomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:hasClickableChildren="true"
        android:clipChildren="false">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/emotion_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false">
        </androidx.recyclerview.widget.RecyclerView>
    </com.otaliastudios.zoom.ZoomLayout>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_note_button_background"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/choose_emotion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_emotion"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginEnd="16dp"
            android:lineHeight="18dp"
            android:fontFamily="@font/velasans_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/forward_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next_button_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/forward_button_allow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:src="@drawable/next_button_arrow_allow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/description_cont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/forward_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_feeling_tired_description"
                android:fontFamily="@font/velasans_regular"
                android:textSize="12sp"
                android:lineHeight="18dp"
                app:layout_constraintTop_toBottomOf="@id/emotion_name"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/emotion_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mock_tired"
                android:textSize="12sp"
                android:lineHeight="18dp"
                android:fontFamily="@font/velasans_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/blue_card_text"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>